2005-07-20  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (r4Environment, r5Environment,
	kawaEnvironment): Make final, and allocate in static block.

2005-06-29  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (numEqu, numGrt, numGEq, numLss, numLEq):
	New static fields for the numeric compare functions.
	(initScheme): Re-define numeric comparisions using new fields.

2005-06-27  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (checkMemberContext): New method.
	(rewrite): Call checkMemberContext.
	* kawa/standard/set_b.java (rewriteFrom): Set context Declaration.
	Fixes Savannah bug #4881.

2005-06-26  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (processAccesses): Call new capture method
	in LambdaExp to force field to get allocated.
	* kawa/standard/syntax_case.java (rewriteClauses): Handle SyntaxForm
	in input form.

	* kawa/lang/SyntaxTemplate.java (convert_template): Convert '(... ...)'
	to '...' as in other syntax-case implementations.

2005-06-04  Per Bothner  <per@bothner.com>

	* kawa/Shell.java: Update for AbstractFormat move to gnu.lists.
	* kawa/standard/Scheme.java: Likewise.

	* kawa/Shell.java (getOutputConsumer): Check for AbstractFormat
	instead of removed FormatToConsumer.
	(run): Likewise update types.
	* kawa/standard/Scheme.java (writeFormat, displayFormat): Change type.
	(getFormat): Change return type to AbstractFormat.

	* kawa/standard/Scheme.java: Redefine write and display as functions
	in kawa.lib.ports, since DisplayForm no longer extends Procedure.
	For same reason, don't call setname on writeFormat and displayFormat.

2005-05-27  Christian Surlykke <christian@surlykke.dk>

	* build.xml: Make mappers insider uptodate elements take build.dir
	property into account.
	* build.properties: Use basedir in template for build.dir property.

2005-06-02  Per Bothner  <per@bothner.com>

	Handle re-exporting declarations imported from a module.